# aether

./: .env.example  .gitignore  LICENSE  README.md  config.py  ingestion.py  main.py  pyproject.toml  server.py  session.ps1  session.sh  stats.py  stats_engine.py  ui_templates.py
data/: projects.json.example
src/aether/api/: app.py
src/aether/core/: config.py  engine.py  explorer.py  ingest.py  projects.py  stats.py  watcher.py
src/aether/ui/: templates.py
