[project]
name = "aether-context-engine"
version = "0.1.0"
description = "Universal context engine for AI-assisted development"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llama-index>=0.14.20",
    "llama-index-embeddings-google-genai>=0.5.0",
    "llama-index-llms-google-genai>=0.9.1",
    "llama-index-readers-github>=0.11.2",
    "python-dotenv>=1.2.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "psutil>=7.2.2",
    "watchdog>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
